<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_paid"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/tv_sub_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/paid_plan_title" />

        <TextView
            android:id="@+id/tv_sub_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/paid_plan_desc"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_name" />

        <TextView
            android:id="@+id/tv_sub_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="$1"
            android:textColor="?attr/colorPrimary"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/subscribe"
            app:layout_constraintEnd_toStartOf="@+id/subscribe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/subscribe" />

        <Button
            android:id="@+id/subscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/subscribe"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_desc" />

        <ProgressBar
            android:id="@+id/progress_subscribe_loading"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/subscribe"
            app:layout_constraintEnd_toEndOf="@+id/subscribe"
            app:layout_constraintStart_toStartOf="@+id/subscribe"
            app:layout_constraintTop_toTopOf="@+id/subscribe" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>