<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="325dp">

    <FrameLayout
        android:id="@+id/top_frame"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/overlay"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_close" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/current_cards"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/top_frame"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/current_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="-"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upper_right_number"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/current_cards"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/reduce_upper_right_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_remove_24" />

        <TextView
            android:id="@+id/upper_right_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="0"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/add_upper_right_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_add_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/used_card_last_round"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/reduce_used_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_remove_24" />

        <TextView
            android:id="@+id/used_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="0"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/add_used_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_add_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/draw_card_last_round"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageView
            android:id="@+id/reduce_draw_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_remove_24" />

        <TextView
            android:id="@+id/draw_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="0"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/add_draw_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_add_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discard_card_last_round"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <ImageView
            android:id="@+id/reduce_discard_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_remove_24" />

        <TextView
            android:id="@+id/discard_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="0"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/add_discard_card"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_add_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/overlay"
        android:letterSpacing="0.1"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp"
        android:text="@string/reset"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <TextView
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="@color/overlay"
        android:letterSpacing="0.1"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp"
        android:text="@string/calculate"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reset" />
</androidx.constraintlayout.widget.ConstraintLayout>