<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        tools:layout_editor_absoluteX="20dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_free"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardElevation="1dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_plan_title"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_free_plan_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/free_plan_desc"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/tv_rewards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0/5"
                android:textColor="?attr/colorPrimary"
                android:textSize="17sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_watch_ads"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_watch_ads"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/get_reward"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_free_plan_description" />

            <ProgressBar
                android:id="@+id/progress_ad_loading"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/btn_watch_ads"
                app:layout_constraintEnd_toEndOf="@+id/btn_watch_ads"
                app:layout_constraintStart_toStartOf="@+id/btn_watch_ads"
                app:layout_constraintTop_toTopOf="@+id/btn_watch_ads" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_subs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_free"
        android:overScrollMode="never"/>

</androidx.constraintlayout.widget.ConstraintLayout>