<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_floating_window"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:backgroundTint="@color/overlay"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/minimize"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/chevron_up_box"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_baseline_settings_applications_24"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@id/minimize"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <ImageButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/current_round"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="Round 1"
                android:textColor="@color/onSurface"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/current_energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textColor="@color/onSurface"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_round" />

            <ImageView
                android:id="@+id/img_energy_used"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_energy_used"
                app:layout_constraintEnd_toStartOf="@id/layout_energy_used"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_energy" />

            <LinearLayout
                android:id="@+id/layout_energy_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/img_energy_used"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_energy_used"
                app:layout_constraintTop_toTopOf="@+id/img_energy_used">

                <ImageView
                    android:id="@+id/reduce_energy_used"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_remove_24" />

                <TextView
                    android:id="@+id/energy_used"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/onSurface"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/increase_energy_used"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_add_24" />

            </LinearLayout>

            <ImageView
                android:id="@+id/img_energy_destroyed"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_energy_destroyed"
                app:layout_constraintEnd_toStartOf="@id/layout_energy_destroyed"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_energy_used" />

            <LinearLayout
                android:id="@+id/layout_energy_destroyed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/img_energy_destroyed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_energy_destroyed"
                app:layout_constraintTop_toTopOf="@+id/img_energy_destroyed">

                <ImageView
                    android:id="@+id/reduce_energy_destroyed"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_remove_24" />

                <TextView
                    android:id="@+id/energy_destroyed"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/onSurface"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/increase_energy_destroyed"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_add_24" />

            </LinearLayout>

            <ImageView
                android:id="@+id/img_energy_gained"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_energy_gained"
                app:layout_constraintEnd_toStartOf="@id/layout_energy_gained"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_energy_destroyed" />

            <LinearLayout
                android:id="@+id/layout_energy_gained"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/img_energy_gained"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_energy_gained"
                app:layout_constraintTop_toTopOf="@+id/img_energy_gained">

                <ImageView
                    android:id="@+id/reduce_energy_gained"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_remove_24" />

                <TextView
                    android:id="@+id/energy_gained"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/onSurface"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/increase_energy_gained"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_add_24" />

            </LinearLayout>

            <TextView
                android:id="@+id/calculate"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_floating_window"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:paddingHorizontal="10dp"
                android:text="@string/next"
                android:textColor="@color/onSurface"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/reset_rounds" />

            <ImageView
                android:id="@+id/img_undo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:src="@drawable/ic_undo"
                app:layout_constraintBottom_toBottomOf="@+id/reset_rounds"
                app:layout_constraintEnd_toStartOf="@+id/calculate"
                app:layout_constraintStart_toEndOf="@+id/reset_rounds"
                app:layout_constraintTop_toTopOf="@+id/reset_rounds" />

            <TextView
                android:id="@+id/reset_rounds"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_floating_window"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:paddingHorizontal="10dp"
                android:text="@string/reset"
                android:textColor="@color/onSurface"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_energy_gained" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/expand_energy_calc"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="visible"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>